--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -132,6 +132,7 @@ header
 			font-family: 'ArialRegular', sans-serif
 			font-weight: normal
 .table 
+	padding-bottom: 65px
 	margin-top: 50px
 	.auto-title
 		margin-left: 15px
@@ -140,15 +141,17 @@ header
 		text-transform: uppercase
 		margin-top: 0
 		position: relative
-			&:before
-				content: ''
-				position: absolute
-				width: 3px
-				height: 18px
-				background-color: #8b9497
+		&:before
+			content: ''
+			position: absolute
+			width: 3px
+			height: 18px
+			background-color: #8b9497
+			bottom: 4px
+			left: -12px
 
 	table
-		width: 100%
+		
 		tr 
 			border-spacing: 0
 			border-radius: 10px
@@ -166,7 +169,7 @@ header
 			&:first-child
 				border-top-left-radius: 5px
 				padding-left: 15px
-				max-width: 450px
+				
 			&:last-child 
 				border-top-right-radius: 5px
 			&:nth-child(5)
@@ -184,7 +187,6 @@ header
 						bottom: 0
 						right: -15px
 		td 
-			white-space: nowrap
 			&:first-child
 				padding-left: 15px
 				color: #323232
@@ -193,8 +195,10 @@ header
 			font-size: 15px
 			&:nth-child(2)
 				color: #282d30
+			&:nth-child(4)
+			
 			&:nth-child(5)
-				white-space: nowrap
+			
 			&:nth-child(6)	
 				padding: 5px 0 5px 0
 				color: #8b9497
@@ -231,6 +235,15 @@ header
 				background-color: #d74345
 			.green-circle
 				background-color: #88c504
+footer 
+	background-color: #282d30
+	.copyright-wrap
+		font-family: 'RobotoLight', sans-serif
+		font-size: 11px
+		margin: auto
+		text-align: center
+		padding: 40px
+		color: #fff			
 
 
 
