--- a/css/main-dist.css
+++ b/css/main-dist.css
@@ -34,6 +34,10 @@ header .logo {
 header .head-mnu {
   margin-left: 80px;
   color: #fff;
+  position: relative;
+}
+header .head-mnu ul {
+  margin-bottom: 0;
 }
 header .head-mnu ul li {
   display: inline-block;
@@ -50,6 +54,35 @@ header .head-mnu ul li a {
 }
 header .head-mnu ul li a:hover {
   border-bottom: 3px solid #00aeef;
+}
+header .head-mnu .hide-mnu {
+  background-color: #282d30;
+  width: 240px;
+  margin-top: 0;
+  position: absolute;
+  padding-left: 0;
+  left: 30px;
+  z-index: 2;
+  display: none;
+}
+header .head-mnu .hide-mnu li {
+  display: block;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 10px 10px;
+  text-transform: none;
+  border-bottom: 1px solid #383d40;
+  width: 100%;
+}
+header .head-mnu .hide-mnu li:last-child {
+  border-bottom: none;
+}
+header .head-mnu .hide-mnu li:hover {
+  background-color: #00aeef;
+}
+header .head-mnu .hide-mnu li a {
+  padding-left: 20px;
 }
 
 .brands {
