--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -137,7 +137,8 @@ header
 				&:hover .vertical-line
 					background-color: #e3343d
 			.clothes-descr
-				float: right	
+				float: right
+				display: none	
 				span 
 					font-size: 20px
 					color: #fff
