--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -43,6 +43,16 @@ header
 				padding: 26px 20px	
 				line-height: 14px
 				text-transform: uppercase
+				&:hover
+					background-image: url("../img/menu-arrow.png")
+					background-repeat: no-repeat
+					background-position: 124px 30px
+
+					a 
+						border-bottom: 3px solid #00aeef
+						background-image: url("../img/menu-arrow.png")
+						background-repeat: no-repeat
+						background-position: 124px 30px
 
 				
 				a 
@@ -50,8 +60,9 @@ header
 					color: #fff
 					text-decoration: none
 					padding-bottom: 1px
-					&:hover
-						border-bottom: 3px solid #00aeef
+					position: relative
+
+					
 		.hide-mnu 
 			background-color: #282d30
 			width: 240px
@@ -74,6 +85,7 @@ header
 					border-bottom: none
 				&:hover 
 					background-color: #00aeef
+					background-image: none
 				a 
 					padding-left: 20px
 
@@ -84,13 +96,19 @@ header
 	select
 		display: block	
 		margin-top: 15px
-		width: 200px
-		padding: 3px 0	
-		font-family: 'ArialBold', sans-serif
+		padding: 5px 120px 5px 5px	
+		font-family: 'ArialRegular', sans-serif
 		margin-bottom: 50px
+		background-color: transparent
+		position absolute
+		color: #999999
+		text-transform: uppercase
+		option 
+			&:hover 
+				color: #000
 	.brand-item
 		background-color: #000
-		min-height: 560px
+		height: 560px
 		position: relative
 		.cat-img
 			opacity: .25
@@ -271,7 +289,32 @@ footer
 		margin: auto
 		text-align: center
 		padding: 40px
-		color: #fff		
+		color: #fff	
+.owl-nav
+	div 
+		width: 16px
+		height: 40px
+		background-image: url("../img/slider-arrows.png")
+		background-repeat: no-repeat
+		position: absolute
+		top: 46% 
+		&.owl-prev 
+			left: 40px
+		&.owl-next
+			right: 40px
+			background-position: top right
+.review 
+	position: absolute
+	top: 38%
+	padding: 20px
+	width: 50%
+	left: 25%
+	right: 25%
+	color: #fff	
+	font-family: 'RobotoRegular'
+	font-size: 18px
+	font-weight: normal		
+			
 
 
 
